--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
 	},
 	"dependencies":{
 		"grunt":"~0.4.0",
-		"grunt-contrib-requirejs":"~0.4.0"
+		"grunt-contrib-requirejs":"~0.4.0",
+		"grunt-contrib-clean":"~0.4.0",
+		"grunt-contrib-copy":"~0.4.0",
+		"grunt-text-replace":"~0.3.8",
+		"grunt-zip":"~0.9.1",
+		"grunt-contrib-connect":"~0.5.0",
+		"grunt-ftp-deploy":"~0.0.1",
+		"grunt-open":"~0.2.2"
 	},
 	"engines":{
 		"node":"0.8.x"
