--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name":"navigator-injector-backbone-command-setup",
+	"name":"nibc-todomvc",
 	"version":"0.1.0",
 	"author":{
 		"name":"Paul Tondeur",
 		"email":"paul@paultondeur.nl",
 		"url":"http://paultondeur.com"
 	},
-	"description":"(almost) Empty project setup using navigator.js, injector.js and Backbone.Command",
+	"description":"Todo MVC using navigator.js, injector.js and Backbone Command",
 	"repository":{
 		"type":"git",
-		"url":"https://github.com/PaulTondeur/navigator-injector-backbone-command-setup"
+		"url":"https://github.com/PaulTondeur/nibc-todomvc"
 	},
 	"dependencies":{
 		"grunt":"~0.4.0",
