Implemented backbone-recursive-toJSON

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "backbone-super": "*",
     "backbone-injector": "*",
     "backbone-command": "*",
+    "backbone-recursive-toJSON": "*",
     "greensock-js": "*",
     "todomvc-common": "~0.1.8"
   }
